itermediate commit during profile removal